# business-assistant-project-management-plugin

./: .gitignore  CLAUDE.md  README.md  code_analysis_rules.json  pyproject.toml  start.bat
src/business_assistant_pm/: __init__.py  config.py  constants.py  database.py  date_utils.py  delegation_service.py  plugin.py  plugin_helpers.py  project_service.py  tools_delegation.py  tools_project.py  tools_settings.py  tools_tracking.py  tools_workflow.py  tracking_service.py  workflow_service.py
tests/: conftest.py  test_add_project_update.py  test_config.py  test_create_project.py  test_create_project_from_note.py  test_database.py  test_date_utils.py  test_deadlines_tools.py  test_delegation_service.py  test_email_references.py  test_match_email_to_project.py  test_match_info_tools.py  test_match_rules.py  test_plugin_registration.py  test_project_service.py  test_store_file_in_project.py  test_timetracking_tools.py  test_tracking_service.py  test_workflow_service.py  test_workflow_tools.py
